gitops/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.cloud.hostspaceng.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - argocd.cloud.hostspaceng.com
      secretName: argocd-secret
